Add 'composer-char-counter.js' to 'public/scripts/'. Update this file, 'index.html' and 'new-tweet.css' to add character counting functionality to the new tweet form.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -79,3 +79,12 @@
 #New-Tweet-Form form output {
   font-weight: 600;
 }
+
+
+/* This is a special selector that is applied to the character counter output.
+ * It is triggered via `composer-char-counter.js` whenever the character count
+ * rises above 140.
+ */
+.Counter-Over-Limit {
+  color: #FF1100;
+}
