--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -1,5 +1,5 @@
-/* Targets the `Tweet-Body` section. */
-#Tweet-Body {
+/* Targets the `Tweets-Container` section. */
+#Tweets-Container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,23 +8,24 @@
 
 
 /* Targets the tweet's full body.  */
-#Tweet-Body article:hover {
+#Tweets-Container article:hover {
   box-shadow: #C8CAE3 10px 10px;
 
 }
 
 
-/* Targets the article in the `Tweet-body`. */
-#Tweet-Body article {
+/* Targets the article in the `Tweets-Container`. */
+#Tweets-Container article {
   width: 91%;
   border: solid;
 
   padding: 1.5rem;
+  margin: 1rem 1rem;
 }
 
 
-/* Targets the `header` element in `Tweet-Body`. */
-#Tweet-Body header {
+/* Targets the `header` element in `Tweets-Container`. */
+#Tweets-Container header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -33,14 +34,14 @@
 
 
 /* Targets the `div` containing the user photo and name. */
-#Tweet-Body header div {
+#Tweets-Container header div {
   display: flex;
   align-items: center;
 }
 
 
 /* Targets the user photo in each tweet's body. */
-#Tweet-Body header div img {
+#Tweets-Container header div img {
   margin-right: 1rem;
 
   height: 40px;
@@ -49,7 +50,7 @@
 
 
 /* Targets the User Tag, just above the tweet's body. */
-#Tweet-Body header a {
+#Tweets-Container header a {
   color: #d2d3e4;
   font-weight: 600;
   text-decoration: none;
@@ -57,20 +58,20 @@
 
 
 /* The element that displays the tweet's body. */
-#Tweet-Body article output {
+#Tweets-Container article output {
   width: 90%;
   font-weight: 600;
 }
 
 
 /* The date element */
-#Tweet-Body footer p {
+#Tweets-Container footer p {
   margin: 0.5rem;
 }
 
 
 /* The `footer` element in Tweet bodies. */
-#Tweet-Body footer {
+#Tweets-Container footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -83,7 +84,7 @@
 /* Targets the `a` elements in the `div` containing the social media buttons (
  * Flag, Re-tweet, Lik).
  */
-#Tweet-Body footer div a {
+#Tweets-Container footer div a {
   color: #4055A1;
 }
 
@@ -91,6 +92,6 @@
 /* Targets the `a` elements in the `div` containing the social media buttons
  * when you hover over the elements.
  */
-#Tweet-Body footer div a:hover {
+#Tweets-Container footer div a:hover {
   color: #C8992A;
 }
