--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -18,6 +18,6 @@
 
 /* Targets the `User Name` `h2` Heading. */
 #User-Profile div h2 {
-  margin-top: -30px;
+  margin-top: 1rem;
   color: #FFFFFF;
 }
