Add new image to 'public/images'. Change user profile image in 'public/index.html'. Add styles for it in 'public/styles/header.css'.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -16,6 +16,12 @@
 }
 
 
+#User-Profile div img {
+  height: 300px;
+  width: 230px;
+}
+
+
 /* Targets the `User Name` `h2` Heading. */
 #User-Profile div h2 {
   margin-top: -0.5rem;
