--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -16,9 +16,16 @@
 }
 
 
+/* Targets the User Profile Image. */
 #User-Profile div img {
+
+  /* `height` and `width` set to a 1.3 ratio because that was the original
+   * image ratio.
+   */
   height: 300px;
   width: 230px;
+
+  border-radius: 50%;
 }
 
 
