--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,9 +31,12 @@ body {
 }
 
 
-#Tweet-Container-Main{
+#Tweet-Container-Main {
   background-color: #F4F1EC;
-  width: 90%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 
