--- a/public/styles/media-queries.css
+++ b/public/styles/media-queries.css
@@ -1,4 +1,7 @@
 /* Desktop Screen Styles */
+/* 1024px is NOT the ideal min-width breakpoint, so it has been moved up to
+ * 1268px.
+ */
 @media screen and (min-width: 1268px) and (max-width: 2560px) {
 
   /* Targets the container that holds `User-Profile` & `Tweet-Container-Main`. */
